<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D52B1E">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Information">

        <TextView
            android:id="@+id/textViewDevelopment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txtDeveloper"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDevelopment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/txtDeveloperName" />

        <TextView
            android:id="@+id/textViewDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDeveloper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txtDisclaimer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDisclaimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDisclaimer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txtDisclaimerText" />

        <TextView
            android:id="@+id/textViewSugestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDisclaimerText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/txtSugestions" />

        <Button
            android:id="@+id/buttonContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSugestions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:onClick="contactClick"
            android:text="@string/txtContact" />

    </RelativeLayout>
</ScrollView>